feat(i18n): 한국어 지원 추가 및 환경 변수 파일 업데이트

--- a/packages/frontend/editor-ui/src/plugins/i18n/locales/en.json
+++ b/packages/frontend/editor-ui/src/plugins/i18n/locales/en.json
@@ -2838,7 +2838,7 @@
 	"settings.personal.theme.dark": "Dark theme",
 	"settings.personal.languages": "Languages",
 	"settings.personal.languages.en": "English",
-	"settings.personal.languages.kr": "Korean",
+	"settings.personal.languages.ko": "Korean",
 	"settings.personal.mfa.button.disabled.infobox": "Two-factor authentication is currently disabled.",
 	"settings.personal.mfa.button.enabled.infobox": "Two-factor authentication is currently enabled.",
 	"settings.personal.mfa.button.enabled": "Enable 2FA",
