fix(i18n): 한국어 번역 수정 - '개요'를 '대시보드'로 변경

--- a/packages/frontend/editor-ui/src/plugins/i18n/locales/ko.json
+++ b/packages/frontend/editor-ui/src/plugins/i18n/locales/ko.json
@@ -2720,7 +2720,7 @@
 	"projects.create": "생성",
 	"projects.create.personal": "개인에 생성",
 	"projects.create.team": "프로젝트에 생성",
-	"projects.menu.overview": "개요",
+	"projects.menu.overview": "대시보드",
 	"projects.menu.title": "프로젝트",
 	"projects.menu.personal": "개인",
 	"projects.menu.addFirstProject": "프로젝트 추가",
